# kaggle-eedi

./: Makefile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
