[tool.poetry]
name = "detect-ai-generated-text"
version = "0.1.0"
description = ""
authors = ["shimatar0 <shimataro0579@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
    "F401"
]